--- a/Discord/midnight-catppuccin-macchiato.theme.css
+++ b/Discord/midnight-catppuccin-macchiato.theme.css
@@ -3,11 +3,8 @@
  * @description A dark, rounded discord theme. Based on catppuccin macchiato theme (https://github.com/catppuccin/catppuccin).
  * @author refact0r, esme, anubis
  * @version 1.6.2
- * @invite nz87hXyvcy
  * @website https://github.com/refact0r/midnight-discord
  * @source https://github.com/refact0r/midnight-discord/blob/master/flavors/midnight-catppuccin-macchiato.theme.css
- * @authorId 508863359777505290
- * @authorLink https://www.refact0r.dev
 */
 
 /* IMPORTANT: make sure to enable dark mode in discord settings for the theme to apply properly!!! */
@@ -20,7 +17,7 @@
 	--font: 'figtree';
 
 	/* top left corner text */
-	--corner-text: 'Catppuccin';
+	--corner-text: 'NafizHC';
 
 	/* color of status indicators and window controls */
 	--online-indicator: #a6da95; /* change to #23a55a for default green */
