--- a/Discord/midnight-catppuccin-mocha.theme.css
+++ b/Discord/midnight-catppuccin-mocha.theme.css
@@ -5,6 +5,7 @@
  * @version 1.6.2
  * @website https://github.com/refact0r/midnight-discord
  * @source https://github.com/refact0r/midnight-discord/blob/master/flavors/midnight-catppuccin-mocha.theme.css
+ * @authorLink https://www.refact0r.dev
 */
 
 /* IMPORTANT: make sure to enable dark mode in discord settings for the theme to apply properly!!! */
