--- a/Discord/discord-mica.theme.css
+++ b/Discord/discord-mica.theme.css
@@ -18,6 +18,7 @@
   --dark-button: rgb(45,45,45);
   --dark-button-border: rgb(60, 60, 60);
   --dark-button-font-color: white;
+  --dark-background-accent: rgba(50,50,50,0.9);
 
   /*Light mode*/
   --light-bg: transparent;
@@ -27,4 +28,9 @@
   --light-button: rgb(251,251,251);
   --light-button-border: rgb(204, 204, 231);
   --light-button-font-color: black;
+  --light-background-accent: rgba(160,160,160,0.9);
+
+  /* Titlebar */
+  --custom-app-top-bar-height: calc(24px + var(--space-sm)); /* Set to 0 if you don't want to use Discord title-bar */
+  --title-bar-icon: flex; /* Set to none to remove icons */
   }
